# EMEI-Facilitator

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.combined  README.md  entrypoint.sh
crates/emei-cli/: Cargo.toml  README.md
crates/emei-cli/src/: main.rs
crates/emei-facilitator/: Cargo.toml  README.md
crates/emei-facilitator/abi/: IBay8004.json  IEMEIInvoice.json  IEMEIMandate.json  IEMEIReceipt.json  IEMEISettlement.json  IMockERC8004.json
crates/emei-facilitator/src/: chain.rs  config.rs  error.rs  lib.rs  merkle.rs  nonce.rs  redis_client.rs  signing.rs  state.rs  types.rs
crates/emei-facilitator/src/contracts/: bay8004.rs  erc8004.rs  invoice.rs  mandate.rs  mod.rs  receipt.rs  settlement.rs
crates/emei-facilitator/src/db/: mod.rs  queries.rs  schema.rs  tx_queue.rs
crates/emei-facilitator/src/routes/: dashboard.rs  health.rs  identity.rs  invoice.rs  mandate.rs  mod.rs  paylink.rs  public.rs  query.rs  receipt.rs  webhook.rs  withdraw.rs
crates/emei-facilitator/src/services/: batcher.rs  collector.rs  indexer.rs  mod.rs  scanner.rs  tx_reaper.rs  tx_sender.rs  webhook_worker.rs
examples/demo-agents/: .env.example  Dockerfile  README.md  docker-compose.demo.yml  package-lock.json  package.json  tsconfig.json
examples/demo-agents/src/: analytics-bot.ts  compute-bot.ts  seed.ts  shared.ts  signal-bot.ts  trader-bot.ts
landing/: README.md  package-lock.json  package.json
landing/app/: globals.css  layout.tsx  page.tsx
landing/app/_components/: BootSequence.tsx  BracketFrame.tsx  Chrome.tsx  Closing.tsx  CustomCursor.tsx  DotGrid.tsx  Hero.tsx  InvoiceSprite.tsx  Manifesto.tsx  Primitives.tsx  SectionLabel.tsx  Settlement.tsx
