[workspace]
resolver = "2"
members = ["crates/emei-facilitator", "crates/emei-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axum = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "2.0" }
tokio = { version = "1.35", features = ["sync", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { version = "0.1" }
async-trait = { version = "0.1" }
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = { version = "0.15" }
