[package]
name = "emei-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "emei"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
