[package]
name = "emei-facilitator"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "emei-server"
path = "src/bin/server.rs"

[dependencies]
axum = { workspace = true }
tokio = { version = "1.35", features = [
    "sync",
    "rt-multi-thread",
    "signal",
    "macros",
    "time",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }

# Alloy (matching workspace pattern from x402-chain-eip155)
alloy-primitives = { version = "1.4" }
alloy-provider = { version = "1.4" }
alloy-network = { version = "1.4" }
alloy-rpc-types-eth = { version = "1.4" }
alloy-transport = { version = "1.4" }
alloy-transport-http = { version = "1.4" }
alloy-signer = { version = "1.4" }
alloy-signer-local = { version = "1.4" }
alloy-contract = { version = "1.4" }
alloy-sol-types = { version = "1.4", features = ["json"] }

tokio-rusqlite = "0.6"
hex = "0.4"
dotenvy = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1.4"
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
http-body-util = "0.1"
